--- a/circle.yml
+++ b/circle.yml
@@ -19,7 +19,7 @@ deployment:
     branch: /.*/
     commands:
       - docker login -e anang.zakiyaman@gmail.com -u zakiyaman -p Fitrah13
-      - docker tag dockerapp_dockerapp $DOCKER_HUB_USER_ID/dockerapp:$CIRCLE_SHA1
-      - docker tag dockerapp_dockerapp $DOCKER_HUB_USER_ID/dockerapp:latest
-      - docker push $DOCKER_HUB_USER_ID/dockerapp:$CIRCLE_SHA1
-      - docker push $DOCKER_HUB_USER_ID/dockerapp:latest
+      - docker tag dockerapp_dockerapp zakiyaman/dockerapp:$CIRCLE_SHA1
+      - docker tag dockerapp_dockerapp zakiyaman/dockerapp:latest
+      - docker push zakiyaman/dockerapp:$CIRCLE_SHA1
+      - docker push zakiyaman/dockerapp:latest
